<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="subject_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_mail">myachkaaa@ya.ru</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favourites">Добавить в избранное</string>
    <string name="player_time">00:00</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name_edit_text">Название*</string>
    <string name="description_edit_text">Описание</string>
    <string name="create_button">Создать</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="exit_creation_title">Завершить создание плейлиста?</string>
    <string name="exit_creation_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="failed_to_create_playlist">Ошибка при создании плейлиста</string>
    <string name="failed_to_save_image">Ошибка в сохранении файла</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="failed_to_add_to_playlist">Ошибка при добавлении в плейлист %1$s</string>
    <string name="delete_track">"Удалить трек"</string>
    <string name="delete_message">"Вы уверены, что хотите удалить трек из плейлиста?"</string>
    <string name="delete">"Удалить"</string>
    <string name="share_playlist">"Поделиться"</string>
    <string name="edit_information">"Редактировать информацию"</string>
    <string name="delete_playlist">"Удалить плейлист"</string>
    <string name="delete_playlist_message">"Вы уверены, что хотите удалить этот плейлист?"</string>
    <string name="empty_playlist_message">"В этом плейлисте нет списка треков, которым можно поделиться"</string>
    <string name="save">"Сохранить"</string>
    <string name="edit_playlist">"Редактировать плейлист"</string>
    <string name="empty_playlist">"В этом плейлисте пока нет треков"</string>
    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minute_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>