<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.practicum.playlistmaker.settings.ui.activity.SettingsFragment">

    <TextView
        style="@style/HeadingStyle"
        android:text="@string/setting" />

    <Switch
        android:id="@+id/themeSwitcher"
        style="@style/TextStyle16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_24"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnPrimary"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <FrameLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            style="@style/TextLocationSetting"
            android:layout_gravity="center_vertical"
            android:text="@string/share" />

        <ImageView
            style="@style/ImageLocationSetting"
            android:src="@drawable/share"
            app:tint="?attr/colorSecondaryVariant" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            style="@style/TextLocationSetting"
            android:layout_gravity="center_vertical"
            android:text="@string/support" />

        <ImageView
            style="@style/ImageLocationSetting"
            android:src="@drawable/support"
            app:tint="?attr/colorSecondaryVariant" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            style="@style/TextLocationSetting"
            android:layout_gravity="center_vertical"
            android:text="@string/agreement" />

        <ImageView
            style="@style/ImageLocationSetting"
            android:src="@drawable/arrow_forward"
            app:tint="?attr/colorSecondaryVariant" />

    </FrameLayout>

</LinearLayout>