<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginTop="@dimen/padding_16"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_28"
            android:layout_marginTop="@dimen/padding_8"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22" />

    </LinearLayout>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_48"
        android:layout_marginTop="@dimen/padding_60"
        android:layout_marginStart="@dimen/padding_16"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:shadowColor="@color/black"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_12"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_12"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/padding_12"
            android:src="@drawable/arrow_forward" />

    </FrameLayout>

</LinearLayout>