<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.practicum.playlistmaker.search.ui.activity.SearchFragment">


    <TextView
        style="@style/HeadingStyle"
        android:text="@string/search" />


    <FrameLayout
        android:id="@+id/agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_16">

        <EditText
            android:id="@+id/editText"
            style="@style/TextStyle16"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_36"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_16"
            android:background="@drawable/edittext_bg"
            android:drawableStart="@drawable/search"
            android:drawablePadding="@dimen/padding_8"
            android:drawableTint="?attr/colorOnTertiary"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_12"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorOnTertiary"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/icon_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:paddingEnd="@dimen/padding_24"
            android:src="@drawable/icon_clear"
            android:visibility="gone"
            app:tint="?attr/colorOnTertiary" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/placeholderNotFound"
            style="@style/PlaceholderStyle"
            android:drawableTop="@drawable/not_found"
            android:text="@string/not_found" />

        <TextView
            android:id="@+id/placeholderNetworkError"
            style="@style/PlaceholderStyle"
            android:layout_marginStart="@dimen/padding_24"
            android:layout_marginEnd="@dimen/padding_24"
            android:drawableTop="@drawable/network_error"
            android:text="@string/network_error" />

        <Button
            android:id="@+id/updateButton"
            style="@style/FunctionalButton"
            android:layout_marginTop="@dimen/padding_348"
            android:text="@string/update"
            android:visibility="gone" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/searchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_40"
            android:theme="@style/Theme.PlaylistMaker">

            <TextView
                android:id="@+id/historyTitle"
                style="@style/TextStyle19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_24"
                android:text="@string/search_history"
                android:textColor="?attr/colorOnPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHistory"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clearHistory"
                style="@style/FunctionalButton"
                android:layout_marginTop="@dimen/padding_24"
                android:text="@string/clear_history" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/padding_44"
            android:layout_height="@dimen/padding_44"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_148"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

    </FrameLayout>
</LinearLayout>