<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_12"
        android:paddingStart="@dimen/padding_12"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_32"
        android:layout_marginBottom="@dimen/padding_16"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/padding_16"
            android:layout_marginVertical="@dimen/padding_8"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:insetTop="@dimen/padding_0"
            android:insetBottom="@dimen/padding_0"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            android:textAllCaps="false"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/padding_16"/>

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/padding_16"
            android:layout_marginVertical="@dimen/padding_8"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:insetTop="@dimen/padding_0"
            android:insetBottom="@dimen/padding_0"
            android:text="@string/library"
            android:textSize="@dimen/text_size_22"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/padding_16"/>

        <Button
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/padding_16"
            android:layout_marginVertical="@dimen/padding_8"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:insetTop="@dimen/padding_0"
            android:insetBottom="@dimen/padding_0"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            app:cornerRadius="@dimen/padding_16"
            app:icon="@drawable/setting"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconTint="@color/black" />

    </LinearLayout>
</LinearLayout>